<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"

    >

    <TextView
        android:id="@+id/info_reg_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_sub"
        android:layout_marginTop="70dp"
        android:text="반려동물 정보 등록"
        android:textAppearance="@style/TogetherPetTextHeadingLarge"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/info_reg_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_reg_main_text"
        app:layout_constraintStart_toStartOf="@id/info_reg_main_text"
        android:layout_marginTop="12dp"
        android:text="반려동물 정보를 등록하시면\n위급시 빠르게 반려동물 정보를 공유할 수 있어요"
        android:textAppearance="@style/TogetherPetTextMedium"
        android:includeFontPadding="false"
        />

    <TextView
        android:id="@+id/info_reg_subtitle_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_reg_subtitle"
        app:layout_constraintStart_toStartOf="@id/name_input_field"
        android:layout_marginTop="1dp"
        android:text="(*는 입력 필수항목 입니다)"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="@style/TogetherPetTextSmallRed"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/step_one_circle"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintEnd_toStartOf="@+id/dot_one_to_two"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:background="@drawable/red_circle"
        android:text="1"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/dot_one_to_two"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintEnd_toStartOf="@+id/step_two_circle"
        android:layout_marginTop="37dp"
        android:layout_width="24dp"
        android:layout_height="6dp"
        android:src="@drawable/dot_dot_dot"/>

    <TextView
        android:id="@+id/step_two_circle"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:background="@drawable/white_circle"
        android:text="2"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"/>

    <ImageView
        android:id="@+id/dot_two_to_three"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintStart_toEndOf="@id/step_two_circle"
        android:layout_marginTop="37dp"
        android:layout_marginStart="8dp"
        android:layout_width="24dp"
        android:layout_height="6dp"
        android:src="@drawable/dot_dot_dot"/>

    <TextView
        android:id="@+id/step_three_circle"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintStart_toEndOf="@id/dot_two_to_three"
        android:layout_marginTop="29.6dp"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/white_circle"
        android:text="3"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"/>


    <TextView
        android:id="@+id/species_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/age_input_field"
        app:layout_constraintStart_toStartOf="@id/species_input_field"
        android:layout_marginTop="27dp"
        android:text="종을 선택해 주세요."
        android:textAppearance="@style/TogetherPetTextMedium"
        android:includeFontPadding="false"/>


    <EditText
        android:id="@+id/species_input_field"
        android:layout_width="338dp"
        android:layout_height="47dp"
        android:hint="종 선택"
        android:textColorHint="@color/KTC_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/species_sub"
        android:background="@drawable/stroke_red_box"
        android:layout_marginTop="17dp"
        android:paddingStart="23dp"
        />

    <TextView
        android:id="@+id/neutering_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/species_input_field"
        app:layout_constraintStart_toStartOf="@id/neutering_input_field"
        android:layout_marginTop="27dp"
        android:text="중성화 여부를 선택해 주세요."
        android:textAppearance="@style/TogetherPetTextMedium"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/neutering_input_field"
        android:layout_width="338dp"
        android:layout_height="47dp"
        android:textColorHint="@color/KTC_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/neutering_sub"
        android:background="@drawable/stroke_red_box"
        android:layout_marginTop="17dp"
        android:paddingStart="23dp"
        android:focusable="false"
        />

    <RadioGroup
        android:id="@+id/neutering_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="23dp"
        app:layout_constraintTop_toTopOf="@id/neutering_input_field"
        app:layout_constraintStart_toStartOf="@id/neutering_input_field"
        app:layout_constraintBottom_toBottomOf="@id/neutering_input_field"
        >
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/button_neutering_true"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:textColor="@color/KTC_red"
            android:buttonTint="@color/KTC_red"
            android:text="O"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/button_neutering_false"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:buttonTint="@color/KTC_red"
            android:textColor="@color/KTC_red"
            android:text="X"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/age_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_input_field"
        app:layout_constraintStart_toStartOf="@id/age_input_field"
        android:layout_marginTop="27dp"
        android:text="나이를 입력해 주세요."
        android:textAppearance="@style/TogetherPetTextMedium"
        android:includeFontPadding="false"/>

    <EditText
        android:id="@+id/age_input_field"
        android:layout_width="338dp"
        android:layout_height="47dp"
        android:hint="개월 수"
        android:textColorHint="@color/KTC_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age_sub"
        android:inputType="number"
        android:digits="0123456789"
        android:background="@drawable/stroke_red_box"
        android:layout_marginTop="17dp"
        android:paddingStart="23dp"
        />

    <TextView
        android:id="@+id/name_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/step_two_circle"
        app:layout_constraintStart_toStartOf="@id/name_input_field"
        android:layout_marginTop="26dp"
        android:text="이름을 입력해 주세요."
        android:textAppearance="@style/TogetherPetTextMedium"
        android:includeFontPadding="false"/>

    <EditText
        android:id="@+id/name_input_field"
        android:layout_width="338dp"
        android:layout_height="47dp"
        android:hint="반려동물 이름"
        android:textColorHint="@color/KTC_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_sub"
        android:background="@drawable/stroke_red_box"
        android:layout_marginTop="17dp"
        android:paddingStart="23dp"
        />

    <TextView
        android:id="@+id/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="338dp"
        android:layout_height="34dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/red_button"
        android:text="다음"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>