<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"

    >

    <TextView
        android:id="@+id/info_reg_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/residence_sub"
        android:layout_marginTop="70dp"
        android:text="반려동물 정보 등록"
        android:textAppearance="@style/TogetherPetTextHeadingLarge"
        android:includeFontPadding="false"
        />

    <TextView
        android:id="@+id/info_reg_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_reg_main_text"
        app:layout_constraintStart_toStartOf="@id/info_reg_main_text"
        android:layout_marginTop="12dp"
        android:text="반려동물 정보를 등록하시면\n위급시 빠르게 반려동물 정보를 공유할 수 있어요"
        android:textAppearance="@style/TogetherPetTextMedium"
        android:includeFontPadding="false"
        />

    <TextView
        android:id="@+id/info_reg_subtitle_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_reg_subtitle"
        app:layout_constraintStart_toStartOf="@id/residence_input_field"
        android:layout_marginTop="1dp"
        android:textColor="@color/KTC_red"
        android:text="(*는 입력 필수항목 입니다)"
        android:textAppearance="@style/TogetherPetTextSmallRed"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/step_one_circle"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintEnd_toStartOf="@+id/dot_one_to_two"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:background="@drawable/red_circle"
        android:text="1"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/dot_one_to_two"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintEnd_toStartOf="@+id/step_two_circle"
        android:layout_marginTop="37dp"
        android:layout_width="24dp"
        android:layout_height="6dp"
        android:src="@drawable/dot_dot_dot"/>

    <TextView
        android:id="@+id/step_two_circle"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:background="@drawable/red_circle"
        android:text="2"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/dot_two_to_three"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintStart_toEndOf="@id/step_two_circle"
        android:layout_marginTop="37dp"
        android:layout_marginStart="8dp"
        android:layout_width="24dp"
        android:layout_height="6dp"
        android:src="@drawable/dot_dot_dot"/>

    <TextView
        android:id="@+id/step_three_circle"
        app:layout_constraintTop_toBottomOf="@+id/info_reg_subtitle_red"
        app:layout_constraintStart_toEndOf="@id/dot_two_to_three"
        android:layout_marginTop="30dp"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/white_circle"
        android:text="3"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"/>


    <EditText
        android:id="@+id/residence_input_field"
        android:layout_width="338dp"
        android:layout_height="47dp"
        android:hint="거주지역 선택"
        android:textColorHint="@color/KTC_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/residence_sub"
        android:background="@drawable/stroke_red_box"
        android:layout_marginTop="17dp"
        android:paddingStart="23dp"
        />

    <TextView
        android:id="@+id/residence_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/step_two_circle"
        app:layout_constraintStart_toStartOf="@id/residence_input_field"
        android:layout_marginTop="26dp"
        android:text="거주 지역을 선택해 주세요.*"
        android:textAppearance="@style/TogetherPetTextMedium"
        android:includeFontPadding="false"/>


    <TextView
        android:id="@+id/feature_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/residence_input_field"
        app:layout_constraintStart_toStartOf="@id/residence_input_field"
        android:layout_marginTop="39dp"
        android:text="반려동물의 특징을 적어주세요."
        android:textAppearance="@style/TogetherPetTextMedium"
        android:includeFontPadding="false"/>
    <TextView
        android:id="@+id/feature_sub_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feature_sub"
        app:layout_constraintStart_toStartOf="@id/residence_input_field"
        android:layout_marginTop="1dp"
        android:textColor="@color/KTC_red"
        android:text="(외적인 특징, 행동 특징을 자세히 적어주시면\n위급 상황 발생 시 큰 도움이 됩니다.)"
        android:textAppearance="@style/TogetherPetTextSmallRed"
        android:includeFontPadding="false"/>

    <EditText
        android:id="@+id/feature_input_field"
        android:layout_width="338dp"
        android:layout_height="131dp"
        android:textColorHint="@color/KTC_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feature_sub_red"
        android:background="@drawable/red_regtangle"
        android:layout_marginTop="17dp"
        android:paddingStart="23dp"
        android:paddingTop="10dp"
        />



    <TextView
        android:id="@+id/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="338dp"
        android:layout_height="34dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/red_button"
        android:text="다음"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>